<resources>
    <string name="app_name">StoreSound</string>
    <string name="sure_add">完成添加</string>
    <string name="more">更多...</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="share">分享</string>
    <string name="delete">删除</string>
    <string name="search">搜索</string>
    <string name="save">保存</string>
    <string name="loading">努力加载中…</string>
    <string name="load_fail">加载失败，请检查网络后重试</string>
    <string name="request_fail">加载失败</string>
    <string name="all_shops">全部店铺</string>
    <string name="all_online_shops">在线</string>
    <string name="all_offline_shops">离线</string>
    <string name="local_music">本地音乐</string>
    <string name="online_music">在线音乐</string>
    <string name="plan_media_plan">播放计划</string>
    <string name="plan_ad_plan">插播计划</string>
    <string name="unknown">未知</string>
    <string name="delete_music">删除%s？</string>
    <string name="setting_ringtone_success">设置铃声成功</string>
    <string name="no_local_music">暂无本地音乐</string>
    <string name="song_list_item_title_1">1.%1$s - %2$s</string>
    <string name="song_list_item_title_2">2.%1$s - %2$s</string>
    <string name="song_list_item_title_3">3.%1$s - %2$s</string>
    <string name="mode_loop">列表循环</string>
    <string name="mode_shuffle">随机播放</string>
    <string name="mode_one">单曲循环</string>
    <string name="play_time_start">00:00</string>
    <string name="now_play">正在播放：%s</string>
    <string name="now_download">正在下载：%s</string>
    <string name="download_success">%s下载完成</string>
    <string name="recent_update">最近更新：%s</string>
    <string name="unable_to_play">暂时无法播放</string>
    <string name="unable_to_download">暂时无法下载</string>
    <string name="unable_to_share">暂时无法分享</string>
    <string name="artist_info">歌手信息</string>
    <string name="artist_info_name">姓名：%s</string>
    <string name="artist_info_country">国籍：%s</string>
    <string name="artist_info_constellation">星座：%s</string>
    <string name="artist_info_stature">身高：%scm</string>
    <string name="artist_info_weight">体重：%skg</string>
    <string name="artist_info_birth">生日：%s</string>
    <string name="artist_info_intro">简介：%s</string>
    <string name="artist_info_empty">暂无歌手信息</string>
    <string name="share_music">我用%1$s分享了歌曲《%2$s》%3$s</string>
    <string name="search_tips">歌曲名、歌手名</string>
    <string name="search_empty">未找到相关结果</string>
    <string name="menu_all_plan">播放计划</string>
    <string name="menu_my_zones">分区管理</string>
    <string name="menu_my_albums">我的歌单</string>
    <string name="menu_sys_albums">系统歌单</string>
    <string name="menu_my_ads">我的广告</string>
    <string name="menu_setting">功能设置</string>
    <string name="menu_export">导出报表</string>
    <string name="menu_about">关于店音</string>
    <string name="slogan">助你打造统一的店铺音乐风格</string>
    <string name="menu_exit">退出应用</string>
    <string name="network">网络</string>
    <string name="mobile_network_play">使用移动网络播放</string>
    <string name="mobile_network_download">使用移动网络下载</string>
    <string name="play">播放</string>
    <string name="sound_effect">音效调节</string>
    <string name="tips">温馨提示</string>
    <string name="play_tips">当前处于移动网络，确定打开移动网络播放开关吗？</string>
    <string name="play_tips_sure">立即打开</string>
    <string name="download_tips">当前处于移动网络，下载将消耗较多流量，是否继续下载？</string>
    <string name="download_tips_sure">继续下载</string>
    <string name="device_not_support">您的设备不支持此功能</string>
    <string name="weather_temp">%s°</string>
    <string name="weather_wind">%1$s风%2$s级&#160;&#160;湿度%3$s%%</string>
    <string name="timer_set">设置成功，将于%s分钟后关闭</string>
    <string name="timer_cancel">定时停止播放已取消</string>
    <string name="share_app">店音，助你打造统一的店铺音乐风格。%s：http://www.zhunit.com</string>
    <string name="copyright">Copyright © 2015&#045;%d ZHUNIT</string>
    <string name="about_project_url">http://www.zhunit.com/business/merch_buy_box.jsp</string>
    <string name="about_weibo">http://www.zhunit.com/</string>
    <string name="about_jianshu">http://www.dianyin.shop/</string>
    <string name="about_github">http://zhunit-music.oss-cn-shenzhen.aliyuncs.com/apk2/dianyin_step.exe</string>
    <string name="music_info">歌曲信息</string>
    <string name="no_permission_location">没有位置信息权限，无法更新天气！</string>
    <string name="no_permission_storage">没有存储空间权限，无法扫描本地歌曲！</string>
    <string name="no_permission_setting">没有权限，无法设置铃声，请授予权限</string>
    <string name="grant_permission_setting">授权成功，请在再次操作以设置铃声</string>
    <string name="no_permission_select_image">没有权限，无法选择图片！</string>
    <string name="activity_playlist">播放列表</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_account">账户</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="user_login">用户登录</string>
    <string name="user_register">注册账户</string>
    <string name="old_login_hint">注意：2018年之前接入店音系统的从这里登录</string>
    <string name="old_login">旧版入口</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">密码太短了</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">请输入账户</string>
    <string name="error_field_required1">请输入密码</string>
    <string name="login_error">登录失败</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="add_shop">添加店铺</string>
    <string name="my_album">我的歌单</string>
    <string name="sys_album">系统歌单</string>
    <string name="sys_album_search">歌单搜索</string>
    <string name="add_album">创建歌单</string>
    <string name="export_shop">店铺报表</string>
    <string name="dev_wifi_set">WIFI设置</string>
    <string name="dev_wifi_select">选择WIFI</string>
    <string name="modify_album">修改歌单</string>
    <string name="select_album">选择歌单</string>
    <string name="my_zones">我的分区</string>
    <string name="plan_detail">计划详情</string>
    <string name="ad_plan_detail">插播计划详情</string>
    <string name="shop_select">选择店铺</string>
    <string name="push_success">插播成功</string>
    <string name="push_fail">插播失败</string>
    <string name="start_date">开始日期</string>
    <string name="plan_detail_add_time">音乐播放时段</string>
    <string name="ad_plan_detail_add_time">插播时段</string>
    <string name="plan_detail_name">计划名称</string>
    <string name="plan_detail_shop_select">自定义店铺</string>
    <string name="plan_detail_groups">选择分区</string>
    <string name="plan_detail_all_music">该计划所有音乐</string>
    <string name="plan_detail_start_date">请设置开始日期</string>
    <string name="plan_detail_end_date">请设置结束日期</string>
    <string name="plan_detail_start_time">开始时间</string>
    <string name="plan_detail_end_time">结束时间</string>
    <string name="plan_create_time_overlap_hint">时间有重叠，请重新选择</string>
    <string name="click_to_add_album">点击添加歌单</string>
    <string name="prompt_email">Email</string>
    <string name="week_every">每天</string>
    <string name="week_monday">星期一</string>
    <string name="week_tuesday">星期二</string>
    <string name="week_wednesday">星期三</string>
    <string name="week_thursday">星期四</string>
    <string name="week_friday">星期五</string>
    <string name="week_saturday">星期六</string>
    <string name="week_sunday">星期日</string>
    <string name="week_select">时间类型（周）</string>
    <string name="no_device_hint">该店铺下没有安装设备</string>
    <string name="version_hint_debug">测试版</string>
    <string name="version_hint_release">正式版</string>
    <string name="push_ad_select_hint">请至少添加一个广告</string>
    <string name="play_time_space">播放时段</string>
    <string name="push_mode_set">插播模式</string>
    <string name="select_push_ad">添加广告（多个）</string>
    <string name="select_push_ad_timeing">添加广告（1个）</string>
    <string name="select_timeing">选择定时时间</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载…</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_finish">上拉或点击加载更多</string>
    <string name="title_activity_plan_list">PlanListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_plan_detail">PlanDetailActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_shop_zone">ShopZoneActivity</string>
    <string name="title_activity_add_shop">Sign in</string>
    <string name="app_close_hint">再按一次退出店音</string>
    <string name="dev_status">状态:</string>
    <string name="dev_status_online">在线</string>
    <string name="dev_status_offline">离线</string>
    <string name="dev_group_belong_hint">所属分区：</string>
    <string name="dev_group_belong_none">未分区</string>
    <string name="dev_shop_addr_none">位置未知</string>
    <string name="dev_shop_play">当前播放:</string>
    <string name="dev_shop_play_none">未播放</string>
    <string name="dev_shop_none_device">该店铺下没有设备</string>
    <string name="dev_shop_detail">店铺详情</string>
    <string name="dev_shop_detail_push_hint">实时插播</string>
    <string name="dev_shop_detail_push_list">插播列表</string>
    <string name="dev_shop_detail_push_record">插播记录</string>
    <string name="dev_shop_detail_volume_hint">音量调节</string>
    <string name="dev_shop_detail_play_mode">模式</string>
    <string name="dev_shop_detail_play_mode_order">顺序播放</string>
    <string name="dev_shop_detail_play_mode_radom">随机播放</string>
    <string name="dev_shop_detail_play_status">播放</string>
    <string name="dev_shop_detail_play_next">下一首</string>
    <string name="dev_shop_detail_cur_play_count">当前播放列表</string>
    <string name="itv_shop_setting_name">&#160;&#160;&#160;&#160;设备名称:</string>
    <string name="itv_shop_setting_addr">&#160;&#160;&#160;&#160;设备地址:</string>
    <string name="itv_shop_setting_oritation">&#160;&#160;&#160;&#160;屏幕方向:</string>
    <string name="itv_shop_setting_last_online_time">&#160;&#160;&#160;&#160;上次连接:</string>
    <string name="itv_shop_setting_dead_time">&#160;&#160;&#160;&#160;到期时间:</string>
    <string name="itv_shop_setting_version">&#160;&#160;&#160;&#160;设备版本:</string>
    <string name="itv_shop_setting_wifi_name">&#160;&#160;&#160;&#160;WIFI信息:</string>
    <string name="itv_shop_setting_wifi_pwd">&#160;&#160;&#160;&#160;WIFI密码:</string>
    <string name="itv_shop_setting_ip">&#160;&#160;&#160;&#160;IP&#160;&#160;地&#160;址:</string>
    <string name="itv_shop_setting_storage">&#160;&#160;&#160;&#160;其他信息:</string>
    <string name="shop_detail_setting">店铺设置</string>
    <string name="over_time">到期时间</string>
    <string name="over_time_end">已过期</string>
    <string name="all_ever">永久有效</string>
    <string name="video_oritation_1">不旋转</string>
    <string name="video_oritation_2">旋转90度</string>
    <string name="video_oritation_3">旋转180度</string>
    <string name="video_oritation_4">旋转270度</string>
    <string name="video_oritation_5">缩放居中</string>
    <string name="video_oritation_6">缩放靠左</string>
    <string name="video_oritation_7">缩放靠右</string>
    <string name="video_oritation_8">充满屏幕</string>
    <string name="video_oritation_9">原始左上角</string>
    <string name="video_oritation_10">原始右上角</string>
    <string name="video_oritation_11">原始左下角</string>
    <string name="video_oritation_12">原始右下角</string>
    <string name="screen_oritiontion">视频设置</string>
    <string name="name_not_change">名称没有改变</string>
    <string name="please_input_content">请输入内容</string>
    <string name="title_activity_main">MainActivity</string>
</resources>