<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/app_name">
        <Preference
            android:key="version"
            android:summary="v 1.0"
            android:title="当前版本" />
        <!--<Preference
            android:key="share"
            android:title="@string/menu_share" />-->
        <Preference
            android:key="star"
            android:summary="在线申请免费试用系统"
            android:title="免费申请试用" />
    </PreferenceCategory>
    <PreferenceCategory android:title="关于我们">
        <Preference
            android:key="weibo"
            android:summary="@string/about_weibo"
            android:title="公司官网" />
        <Preference
            android:key="jianshu"
            android:summary="@string/about_jianshu"
            android:title="操作教程" />
        <Preference
            android:key="github"
            android:summary="@string/about_github"
            android:title="PC播放器下载" />
    </PreferenceCategory>
    <!--<PreferenceCategory android:title="版权">
        <Preference
            android:summary="百度音乐"
            android:title="在线音乐" />
        <Preference
            android:summary="高德地图"
            android:title="天气数据" />
    </PreferenceCategory>-->
</PreferenceScreen>