<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="bottom"
    android:background="@color/transparent" >

	<LinearLayout
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:gravity="center_vertical"
    	android:paddingBottom="28dp"
    	android:background="@color/transparent">

	    <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            >
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="视频旋转"
                android:background="@color/text_black_off"
                android:textColor="@color/white"
                android:padding="6dp"
                android:textSize="@dimen/small_text_size"
                />
	        
            <TextView 
                android:id="@+id/tv_video_direc_one"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sel_item_bg"
                android:padding="12dp"
                android:text="@string/video_oritation_1"
                android:gravity="center"
                />
            <View 
	            android:layout_width="fill_parent"
	            android:layout_height="1dp"
	            android:background="@color/spacebar"
	            />
            <TextView 
                android:id="@+id/tv_video_direc_two"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sel_item_bg"
                android:padding="12dp"
                android:text="@string/video_oritation_2"
                android:gravity="center"
                />
            <View 
	            android:layout_width="fill_parent"
	            android:layout_height="1dp"
	            android:background="@color/spacebar"
	            />
            <TextView 
                android:id="@+id/tv_video_direc_three"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sel_item_bg"
                android:padding="12dp"
                android:text="@string/video_oritation_3"
                android:gravity="center"
                />
            <View 
	            android:layout_width="fill_parent"
	            android:layout_height="1dp"
	            android:background="@color/spacebar"
	            />
            <TextView 
                android:id="@+id/tv_video_direc_four"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sel_item_bg"
                android:padding="12dp"
                android:text="@string/video_oritation_4"
                android:gravity="center"
                />
            
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="缩放位置（屏幕缩放，可能需要重启）"
                android:background="@color/text_black_off"
                android:textColor="@color/white"
                android:padding="6dp"
                android:textSize="@dimen/small_text_size"
                />
            <TextView 
                android:id="@+id/tv_video_direc_5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sel_item_bg"
                android:padding="12dp"
                android:text="@string/video_oritation_5"
                android:gravity="center"
                />
            
            <View 
	            android:layout_width="fill_parent"
	            android:layout_height="1dp"
	            android:background="@color/spacebar"
	            />
            <TextView 
                android:id="@+id/tv_video_direc_6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sel_item_bg"
                android:padding="12dp"
                android:text="@string/video_oritation_6"
                android:gravity="center"
                />
            
            <View 
	            android:layout_width="fill_parent"
	            android:layout_height="1dp"
	            android:background="@color/spacebar"
	            />
            <TextView 
                android:id="@+id/tv_video_direc_7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sel_item_bg"
                android:padding="12dp"
                android:text="@string/video_oritation_7"
                android:gravity="center"
                />
            
            <View 
	            android:layout_width="fill_parent"
	            android:layout_height="1dp"
	            android:background="@color/spacebar"
	            />
            <TextView 
                android:id="@+id/tv_video_direc_8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sel_item_bg"
                android:padding="12dp"
                android:text="@string/video_oritation_8"
                android:gravity="center"
                />
            
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="原始视频位置（视频实际大小，可能需要重启）"
                android:background="@color/text_black_off"
                android:textColor="@color/white"
                android:padding="6dp"
                android:textSize="@dimen/small_text_size"
                />
            <TextView 
                android:id="@+id/tv_video_direc_9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sel_item_bg"
                android:padding="12dp"
                android:text="@string/video_oritation_9"
                android:gravity="center"
                />
            
            <View 
	            android:layout_width="fill_parent"
	            android:layout_height="1dp"
	            android:background="@color/spacebar"
	            />
            <TextView 
                android:id="@+id/tv_video_direc_10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sel_item_bg"
                android:padding="12dp"
                android:text="@string/video_oritation_10"
                android:gravity="center"
                />
            
            <View 
	            android:layout_width="fill_parent"
	            android:layout_height="1dp"
	            android:background="@color/spacebar"
	            />
            <TextView 
                android:id="@+id/tv_video_direc_11"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sel_item_bg"
                android:padding="12dp"
                android:text="@string/video_oritation_11"
                android:gravity="center"
                />
            
            <View 
	            android:layout_width="fill_parent"
	            android:layout_height="1dp"
	            android:background="@color/spacebar"
	            />
            <TextView 
                android:id="@+id/tv_video_direc_12"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sel_item_bg"
                android:padding="12dp"
                android:text="@string/video_oritation_12"
                android:gravity="center"
                />
            
        </LinearLayout>
	    	
	    <View 
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/spacebar"
            />
	    <TextView 
	        android:id="@+id/tv_dialog_wifi_cancel"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="12dp"
	        android:paddingBottom="12dp"
			android:background="@drawable/sel_item_bg"
			android:textColor="@color/main_bg"
			android:gravity="center_horizontal"
			android:text="取消"
			android:clickable="true"
	        />
    </LinearLayout>
    
</LinearLayout>