<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:fitsSystemWindows="true"
    android:minHeight="?attr/actionBarSize">

    <ImageView
        android:id="@+id/iv_menu"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/btn_action_bg_selector"
        android:contentDescription="@null"
        android:scaleType="centerInside"
        android:src="@drawable/ic_menu" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_all_shops"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/all_shops"
            android:textColor="@drawable/music_tab_bar_text_color_selector"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_local_music"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/all_online_shops"
            android:textColor="@drawable/music_tab_bar_text_color_selector"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_online_music"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/all_offline_shops"
            android:textColor="@drawable/music_tab_bar_text_color_selector"
            android:textSize="15sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_search"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="end"
        android:background="@drawable/btn_action_bg_selector"
        android:contentDescription="@null"
        android:scaleType="centerInside"
        android:src="@drawable/ic_menu_search" />
</FrameLayout>